feat(doc) add api doc
