# pkg/controller/cluster.go
@@ -28,6 +28,15 @@ func NewClusterController() *ClusterController {
 	}
 }
 
+// List Cluster
+// @Tags clusters
+// @Summary Show all clusters
+// @Description Show clusters
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} page.Page
+// @Security ApiKeyAuth
+// @Router /clusters/ [get]
 func (c ClusterController) Get() (*dto.ClusterPage, error) {
 	page, _ := c.Ctx.Values().GetBool("page")
 	if page {
@@ -51,6 +60,15 @@ func (c ClusterController) Get() (*dto.ClusterPage, error) {
 	}
 }
 
+// Get Cluster
+// @Tags clusters
+// @Summary Show a cluster
+// @Description Show a cluster
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} dto.Cluster
+// @Security ApiKeyAuth
+// @Router /clusters/ [get]
 func (c ClusterController) GetBy(name string) (*dto.Cluster, error) {
 	cl, err := c.ClusterService.Get(name)
 	if err != nil {
@@ -67,6 +85,16 @@ func (c ClusterController) GetStatusBy(name string) (*dto.ClusterStatus, error) 
 	return &cs, nil
 }
 
+// Create Cluster
+// @Tags clusters
+// @Summary Create a cluster
+// @Description Create a cluster
+// @Param request body dto.ClusterCreate true "request"
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} dto.Cluster
+// @Security ApiKeyAuth
+// @Router /clusters/ [post]
 func (c ClusterController) Post() (*dto.Cluster, error) {
 	var req dto.ClusterCreate
 	err := c.Ctx.ReadJSON(&req)
@@ -148,6 +176,14 @@ func (c ClusterController) PostToolDisableBy(clusterName string) (*dto.ClusterTo
 	return &cts, nil
 }
 
+// Delete Cluster
+// @Tags clusters
+// @Summary Delete a cluster
+// @Description delete a cluster by name
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Router /clusters/{name}/ [delete]
 func (c ClusterController) Delete(name string) error {
 	return c.ClusterService.Delete(name)
 }
